--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -13,7 +13,7 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #2196f3;
+    background: #fdfdff;
     overflow: hidden;
 }
 
