--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Julius+Sans+One&display=swap');
+
+
 .dv1{
     background-color: beige;
 }
@@ -7,3 +11,68 @@
     align-items: center;
     height: 100hv;
 }
+body {
+
+    font-family: "Julius Sans One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  #contactForm {
+    width: 300px;
+    border-radius: 9px;
+    margin: 0 auto;
+  }
+  
+  #contactForm label {
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+  }
+  
+  #contactForm input[type="email"],
+  #contactForm textarea {
+    width: 100%;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+  
+  #contactForm input[type="submit"] {
+    background-color: #ee00ff;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  #contactForm input[type="submit"]:hover {
+    background-color: #ee00ff;
+  }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  
+  .card {
+    margin: 10px;
+    padding: 20px;
+    background-color: #f7f7f7;
+    border: 1px solid #efbad8;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .card h2 {
+    margin-top: 0;
+  }
+  
+  .card p {
+    margin-bottom: 20px;
+  }
+  
+  .col-md-3 {
+    width: 25%;
+  }
